--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 	<input type="email" name="email" placeholder="Your Email" required>
 	<textarea name="message" placeholder="Tell us about your hiring need..." rows="5" required></textarea>
 	
-	 <input type="hidden" name="_next" value="https://varunvinjam.github.io/veriscope-talent/thank-you.html">
+	 <input type="hidden" name="_next" value="https://varunvinjam.github.io/veriscope-talent/thank-you.html?source=client">
 	 <input type="hidden" name="_subject" value="New Client Contact Form Submission">
 	 <input type="text" name="_honey" style="display:none">
 	
