--- a/submit.html
+++ b/submit.html
@@ -16,11 +16,12 @@
       <input type="text" name="name" placeholder="Your Full Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
       <input type="text" name="role" placeholder="Role you're seeking" required>
+	  <input type="url" name="linkedin" placeholder="LinkedIn Profile">
       <textarea name="message" placeholder="Tell us briefly about your background or preferences" rows="4"></textarea>
       <input type="file" name="resume" accept=".pdf,.doc,.docx" required>
 
       <!-- Optional: Redirect to thank you -->
-      <input type="hidden" name="_next" value="https://varunvinjam.github.io/veriscope-talent/thank-you.html">
+     <input type="hidden" name="_next" value="https://varunvinjam.github.io/veriscope-talent/thank-you.html?source=candidate">
 
 	  <!-- Honeypot anti-spam field -->
 	  <input type="text" name="_honey" style="display:none">
