--- a/thank-you.html
+++ b/thank-you.html
@@ -10,9 +10,23 @@
 
   <section class="form-section">
     <h2>Thank You!</h2>
-    <p>Your profile has been submitted successfully. We’ll be in touch soon.</p>
+    <p id="thankYouMessage">Processing...</p> <!-- Dynamic message placeholder -->
     <a href="index.html" class="back-home">← Back to Home</a>
   </section>
+
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    const source = params.get("source");
+    const messageContainer = document.getElementById("thankYouMessage");
+
+    if (source === "candidate") {
+      messageContainer.textContent = "Your profile has been submitted successfully. We’ll be in touch soon.";
+    } else if (source === "client") {
+      messageContainer.textContent = "Thanks for reaching out. We’ve received your message and will get back to you shortly.";
+    } else {
+      messageContainer.textContent = "Thank you for your submission!";
+    }
+  </script>
 
 </body>
 </html>
