--- a/thank-you.html
+++ b/thank-you.html
@@ -22,7 +22,7 @@
     if (source === "candidate") {
       messageContainer.textContent = "Your profile has been submitted successfully. We’ll be in touch soon.";
     } else if (source === "client") {
-      messageContainer.textContent = "Thanks for reaching out. We’ve received your message and will get back to you shortly.";
+      messageContainer.textContent = "We appreciate you reaching out. Our team will respond shortly.";
     } else {
       messageContainer.textContent = "Thank you for your submission!";
     }
