--- a/submit.html
+++ b/submit.html
@@ -10,7 +10,7 @@
 
   <section class="form-section">
     <h2>Submit Your Profile</h2>
-    <p>Looking for your next role? Share your profile with us and we’ll get in touch.</p>
+    <p>Looking for your next role? Share your profile and we’ll get in touch.</p>
 
     <form action="https://formsubmit.co/f4815bb18b7e825053056173b1449e3d" method="POST" enctype="multipart/form-data" class="candidate-form">
       <input type="text" name="name" placeholder="Your Full Name" required>
