--- a/index.html
+++ b/index.html
@@ -186,6 +186,31 @@
     </div>
   </section>
   
+  
+  <section class="testimonials">
+  <h2>What Our Clients Say</h2>
+  <div class="testimonial-carousel">
+    <div class="testimonial-card">
+      <p>"Veriscope Talent helped us find the right candidate within days. Highly professional and responsive!"</p>
+      <span>- Jane Smith, HR Manager, TechNova</span>
+    </div>
+    <div class="testimonial-card">
+      <p>"The hiring process was seamless and efficient. We’ll definitely work with them again."</p>
+      <span>- John Doe, CEO, BuildCore</span>
+    </div>
+    <div class="testimonial-card">
+      <p>"Fantastic experience! They understood our needs perfectly and delivered beyond expectations."</p>
+      <span>- Sarah Lee, Talent Lead, FinEdge</span>
+    </div>
+    <div class="testimonial-card">
+      <p>"Great service and attention to detail. We found exactly who we were looking for."</p>
+      <span>- Mark Wilson, Founder, DataSprint</span>
+    </div>
+  </div>
+</section>
+
+  
+  
   <!-- CONTACT SECTION START -->
 <section class="contact-section" id="contact">
   <h2>Contact Us</h2>
@@ -309,6 +334,25 @@
     });
   });
 </script>
+ 
+ 
+ <script>
+  const carousel = document.querySelector('.testimonial-carousel');
+  let scrollAmount = 0;
+
+  setInterval(() => {
+    if (carousel.scrollWidth - carousel.clientWidth <= scrollAmount) {
+      scrollAmount = 0;
+    } else {
+      scrollAmount += 320; // width + gap
+    }
+    carousel.scrollTo({
+      left: scrollAmount,
+      behavior: 'smooth'
+    });
+  }, 4000); // scroll every 4 seconds
+</script>
+
  
 </body>
 </html>
