--- a/index.html
+++ b/index.html
@@ -91,9 +91,73 @@
     </div>
   </section>
   
+
+  <!-- NEW SERVICES SECTION -->
+  <section class="services" id="services">
+    <div class="services-container">
+      <h2>Our Services</h2>
+      
+      <div class="services-grid">
+        
+        <div class="service-card">
+          <div class="service-icon">
+            <img src="images/crown-svgrepo-com.svg" alt="Executive Search Icon">
+          </div>
+          <h3>Executive & Leadership Search</h3>
+          <p>Finding and engaging senior leaders across industries to drive business success.</p>
+          <ul class="service-features">
+            <li><span class="checkmark">✓</span>Global reach with proven expertise in C-suite and strategic roles</li>
+            <li><span class="checkmark">✓</span>Board-level and executive leadership placements</li>
+            <li><span class="checkmark">✓</span>Comprehensive assessment and cultural fit evaluation</li>
+          </ul>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon">
+            <img src="images/code-laptop-svgrepo-com.svg" alt="Technology Recruitment Icon">
+          </div>
+          <h3>Specialized Technology Recruitment</h3>
+          <p>End-to-end IT recruitment for contract, permanent, and full-time roles.</p>
+          <ul class="service-features">
+            <li><span class="checkmark">✓</span>Specialists in software, cloud, data, cybersecurity, and emerging tech</li>
+            <li><span class="checkmark">✓</span>Full-stack developers, architects, and technical leads</li>
+            <li><span class="checkmark">✓</span>Contract-to-hire and permanent placement options</li>
+          </ul>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon">
+            <img src="images/business-team-svgrepo-com.svg" alt="Professional Hiring Icon">
+          </div>
+          <h3>Professional Hiring (Non-IT)</h3>
+          <p>Comprehensive hiring for non-IT roles across diverse industries.</p>
+          <ul class="service-features">
+            <li><span class="checkmark">✓</span>From operations to marketing, finance, and leadership functions</li>
+            <li><span class="checkmark">✓</span>Sales, HR, legal, and administrative professionals</li>
+            <li><span class="checkmark">✓</span>Industry-specific expertise across all sectors</li>
+          </ul>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon">
+            <img src="images/workflow-svgrepo-com.svg" alt="Managed Programs Icon">
+          </div>
+          <h3>Managed Talent Programs (MSP/RPO)</h3>
+          <p>Streamlined hiring through managed service and outsourcing models.</p>
+          <ul class="service-features">
+            <li><span class="checkmark">✓</span>Improved retention, reduced costs, and faster time-to-hire</li>
+            <li><span class="checkmark">✓</span>End-to-end recruitment process outsourcing</li>
+            <li><span class="checkmark">✓</span>Vendor management and compliance support</li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   
-<section class="services" id="services">
-  <div class="services-container">
+<section class="industries" id="industries">
+  <div class="industries-container">
     <h2>Industries We Support</h2>
 
     <div class="industry-grid">
