--- a/index.html
+++ b/index.html
@@ -72,23 +72,24 @@
       <p>At Veriscope Talent, we build high-impact teams that accelerate growth. Backed by experience with global leaders like Google, Amazon, Uber, Deloitte, and Unilever, our team understands the real hiring challenges fast-growing businesses face. With expertise spanning Technology and non-Technology sectors, we move quickly, protect your standards, and connect you with the exceptional talent your business deserves.</p>
     </div>
 
-    <div class="features">
-      <div class="feature-box">
-        <img src="images/target-svgrepo-com.svg" alt="Precision Hiring">
-        <h3>Precision Hiring</h3>
-        <p>Every search is handled with care. We don't flood inboxes — we handpick profiles that align with your context, team needs, and long-term fit.</p>
-      </div>
-      <div class="feature-box">
-        <img src="images/lightning-svgrepo-com.svg" alt="Quick Turnarounds">
-        <h3>Quick Turnarounds</h3>
-        <p>We move fast without compromising quality. Our process is built to deliver strong candidates — often in days, not weeks.</p>
-      </div>
-      <div class="feature-box">
-        <img src="images/group-svgrepo-com.svg" alt="Built for All Hiring Stages">
-        <h3>Built for All Hiring Stages</h3>
-        <p>Whether you're hiring core team members or senior management, we've got you covered.</p>
-      </div>
-    </div>
+    <!-- Trust Indicators -->
+        <div class="trust-grid">
+            <div class="trust-card">
+                <div class="trust-icon">⚡</div>
+                <h3>Speed & Precision</h3>
+                <p>Closed roles across tech, product, sales, design, and operations with exceptional accuracy and efficiency.</p>
+            </div>
+            <div class="trust-card">
+                <div class="trust-icon">🎯</div>
+                <h3>Market Expertise</h3>
+                <p>Clientele across India, Europe, USA, and the Middle East, adapting to diverse market requirements.</p>
+            </div>
+            <div class="trust-card">
+                <div class="trust-icon">🚀</div>
+                <h3>Rapid Delivery</h3>
+                <p>Delivered top candidates within 3–10 days for urgent mandates when speed is absolutely critical.</p>
+            </div>
+        </div>
   </section>
   
 
