--- a/index.html
+++ b/index.html
@@ -66,31 +66,30 @@
 </section>
   
   
-  <section class="about-us" id="about">
+ <section class="about-us" id="about">
     <h2>About Us</h2>
     <div class="about-description">
       <p>At Veriscope Talent, we build high-impact teams that accelerate growth. Backed by experience with global leaders like Google, Amazon, Uber, Deloitte, and Unilever, our team understands the real hiring challenges fast-growing businesses face. With expertise spanning Technology and non-Technology sectors, we move quickly, protect your standards, and connect you with the exceptional talent your business deserves.</p>
     </div>
-
-    <!-- Trust Indicators -->
-        <div class="trust-grid">
-            <div class="trust-card">
-                <div class="trust-icon">⚡</div>
-                <h3>Speed & Precision</h3>
-                <p>Closed roles across tech, product, sales, design, and operations with exceptional accuracy and efficiency.</p>
-            </div>
-            <div class="trust-card">
-                <div class="trust-icon">🎯</div>
-                <h3>Market Expertise</h3>
-                <p>Clientele across India, Europe, USA, and the Middle East, adapting to diverse market requirements.</p>
-            </div>
-            <div class="trust-card">
-                <div class="trust-icon">🚀</div>
-                <h3>Rapid Delivery</h3>
-                <p>Delivered top candidates within 3–10 days for urgent mandates when speed is absolutely critical.</p>
-            </div>
+    <!-- About Us Indicators -->
+    <div class="about-us-grid">
+        <div class="about-us-card">
+            <div class="about-us-icon">⚡</div>
+            <h3>Speed & Precision</h3>
+            <p>Closed roles across tech, product, sales, design, and operations with exceptional accuracy and efficiency.</p>
         </div>
-  </section>
+        <div class="about-us-card">
+            <div class="about-us-icon">🎯</div>
+            <h3>Market Expertise</h3>
+            <p>Clientele across India, Europe, USA, and the Middle East, adapting to diverse market requirements.</p>
+        </div>
+        <div class="about-us-card">
+            <div class="about-us-icon">🚀</div>
+            <h3>Rapid Delivery</h3>
+            <p>Delivered top candidates within 3–10 days for urgent mandates when speed is absolutely critical.</p>
+        </div>
+    </div>
+</section>
   
 
   <!-- NEW SERVICES SECTION -->
