--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
           <div class="testimonial-content">
             <div class="quote-icon">"</div>
             <p class="testimonial-text">
-              "Veriscope Talent transformed our hiring process. Within 5 days, they delivered 3 exceptional candidates for our Senior Product Manager role. Their understanding of our startup culture and technical requirements was spot-on. The quality of candidates was outstanding."
+              "Veriscope Talent transformed our hiring process. Within 7 days, they delivered 3 exceptional candidates for our Senior Product Manager role. Their understanding of our startup culture and technical requirements was spot-on. The quality of candidates was outstanding."
             </p>
             <div class="testimonial-author">
               <div class="author-avatar">S</div>
@@ -334,7 +334,7 @@
           <div class="testimonial-content">
             <div class="quote-icon">"</div>
             <p class="testimonial-text">
-              "We needed a CFO fast, and Veriscope delivered. Not only did they find us the perfect candidate in just 8 days, but they also handled all the coordination seamlessly. Their professionalism and efficiency are unmatched in the industry."
+              "We needed a CFO fast, and Veriscope delivered. Not only did they find us the perfect candidate, but they also handled all the coordination seamlessly. Their professionalism and efficiency are unmatched in the industry."
             </p>
             <div class="testimonial-author">
               <div class="author-avatar">R</div>
@@ -351,7 +351,7 @@
           <div class="testimonial-content">
             <div class="quote-icon">"</div>
             <p class="testimonial-text">
-              "After struggling with other recruiters for months, Veriscope found our Head of Sales in just one week. They truly understand the healthcare industry and delivered candidates who weren't just qualified, but were a perfect cultural fit too."
+              "After struggling with other recruiters for months, Veriscope found our Head of Sales in under a month. They truly understand the healthcare industry and delivered candidates who weren't just qualified, but were a perfect cultural fit too."
             </p>
             <div class="testimonial-author">
               <div class="author-avatar">M</div>
