--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
                     <div class="stat-icon">🏢</div>
                 </div>
                 <div class="stat-bubble">
-                    <div class="stat-number" data-target="10">0</div>
-                    <div class="stat-label">Average Days to Hire</div>
-                    <div class="stat-icon">⏱️</div>
+                    <div class="stat-number" data-target="85%+">0</div>
+                    <div class="stat-label">Repeat Business Rate</div>
+                    <div class="stat-icon">🤝</div>
                 </div>
             </div>
         </div>
