--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
         <div class="about-us-card">
             <div class="about-us-icon">⚡</div>
             <h3>Speed & Precision</h3>
-            <p>Closed roles across tech, product, sales, design, and operations with exceptional accuracy and efficiency.</p>
+            <p>Our 5-step model ensures we shortlist highly relevant candidates, saving you time without compromising quality.</p>
         </div>
         <div class="about-us-card">
-            <div class="about-us-icon">🎯</div>
+            <div class="about-us-icon">🛠️</div>
+            <h3>Cross-Function Hiring</h3>
+            <p>From technology to sales, product, design, and operations — we hire for the full spectrum of business functions.</p>
+        </div>
+        <div class="about-us-card">
+            <div class="about-us-icon">🌍</div>
             <h3>Market Expertise</h3>
             <p>Clientele across India, Europe, USA, and the Middle East, adapting to diverse market requirements.</p>
-        </div>
-        <div class="about-us-card">
-            <div class="about-us-icon">🚀</div>
-            <h3>Rapid Delivery</h3>
-            <p>Delivered top candidates within 3–10 days for urgent mandates when speed is absolutely critical.</p>
         </div>
     </div>
 </section>
