--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
  <section class="about-us" id="about">
     <h2>About Us</h2>
     <div class="about-description">
-      <p>At Veriscope Talent, we build high-impact teams that accelerate growth. Backed by experience with global leaders like Google, Amazon, Uber, Deloitte, and Unilever, our team understands the real hiring challenges fast-growing businesses face. With expertise spanning Technology and non-Technology sectors, we move quickly, protect your standards, and connect you with the exceptional talent your business deserves.</p>
+      <p>With 35+ years of combined hiring experience for global leaders like Google, Amazon, Deloitte, and Unilever, we know the hiring challenges fast-growing businesses face. Our expertise across Technology and non-Technology sectors helps us deliver precise, efficient, and long-term talent solutions.</p>
     </div>
     <!-- About Us Indicators -->
     <div class="about-us-grid">
