--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 </section>
   
 
-  <!-- NEW SERVICES SECTION -->
+ <!-- NEW SERVICES SECTION -->
+ 
 <section class="services" id="services">
     <div class="services-container">
         <h2>Our Services</h2>
@@ -102,8 +103,9 @@
             <div class="service-card">
                 <div class="service-icon">
                     <div class="service-icon-circle">
+                        <!-- Executive/Leadership Icon - Crown -->
                         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2ZM21 9V7L15 7C14.2 7 13.5 7.3 12.9 7.9L11.5 9.3C11.1 9.7 11.1 10.3 11.5 10.7C11.9 11.1 12.5 11.1 12.9 10.7L14.3 9.3C14.5 9.1 14.8 9 15.1 9H21ZM7 9C7.6 9 8 8.6 8 8S7.6 7 7 7 6 7.6 6 8 6.4 9 7 9ZM3.5 11.5C4.3 11.5 5 10.8 5 10S4.3 8.5 3.5 8.5 2 9.2 2 10 2.7 11.5 3.5 11.5ZM7.5 18.5C7.5 19.3 8.2 20 9 20S10.5 19.3 10.5 18.5 9.8 17 9 17 7.5 17.7 7.5 18.5ZM12 22C10.9 22 10 21.1 10 20S10.9 18 12 18 14 18.9 14 20 13.1 22 12 22ZM18 20.5C17.2 20.5 16.5 19.8 16.5 19S17.2 17.5 18 17.5 19.5 18.2 19.5 19 18.8 20.5 18 20.5Z"/>
+                            <path d="M5 16L3 5L7 7L12 2L17 7L21 5L19 16H5ZM19 19C19 20.1 18.1 21 17 21H7C5.9 21 5 20.1 5 19V18H19V19Z"/>
                         </svg>
                     </div>
                 </div>
@@ -119,6 +121,7 @@
             <div class="service-card">
                 <div class="service-icon">
                     <div class="service-icon-circle">
+                        <!-- Technology Icon - Monitor with code -->
                         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path d="M4,6H20V16H4M20,18A2,2 0 0,0 22,16V6C22,4.89 21.1,4 20,4H4C2.89,4 2,4.89 2,6V16A2,2 0 0,0 4,18H0V20H24V18H20Z"/>
                             <path d="M6,8H10V10H6V8M12,8H18V10H12V8M6,12H14V14H6V12"/>
@@ -137,8 +140,9 @@
             <div class="service-card">
                 <div class="service-icon">
                     <div class="service-icon-circle">
+                        <!-- Professional/Office Building Icon -->
                         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M16,4C16.88,4 17.67,4.5 18,5.26L20,9H4L6,5.26C6.33,4.5 7.12,4 8,4H16M18.5,9L17,12H15L16.5,9H18.5M12.5,9L11,12H9L10.5,9H12.5M6.5,9L5,12H3L4.5,9H6.5M7,13H17V20H7V13M9,15V18H11V15H9M13,15V18H15V15H13Z"/>
+                            <path d="M19,3H15V5H19V19H5V5H9V3H5C3.89,3 3,3.89 3,5V19C3,20.11 3.89,21 5,21H19C20.11,21 21,20.11 21,19V5C21,3.89 20.11,3 19,3M12,1L15,4H9L12,1M7,7V9H9V7H7M11,7V9H13V7H11M15,7V9H17V7H15M7,11V13H9V11H7M11,11V13H13V11H11M15,11V13H17V11H15M7,15V17H9V15H7M11,15V17H13V15H11M15,15V17H17V15H15Z"/>
                         </svg>
                     </div>
                 </div>
@@ -154,9 +158,9 @@
             <div class="service-card">
                 <div class="service-icon">
                     <div class="service-icon-circle">
+                        <!-- Management/Gears Icon -->
                         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12,2A3,3 0 0,1 15,5V11A3,3 0 0,1 12,14A3,3 0 0,1 9,11V5A3,3 0 0,1 12,2M19,11C19,14.53 16.39,17.44 13,17.93V21H11V17.93C7.61,17.44 5,14.53 5,11H7A5,5 0 0,0 12,16A5,5 0 0,0 17,11H19Z"/>
-                            <path d="M12,6A1,1 0 0,0 11,7V11A1,1 0 0,0 12,12A1,1 0 0,0 13,11V7A1,1 0 0,0 12,6Z"/>
+                            <path d="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.35 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.22,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.35 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.22,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.68 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"/>
                         </svg>
                     </div>
                 </div>
@@ -173,6 +177,8 @@
     </div>
 </section>
 
+
+<!-- INDUSTRIES SECTION -->
   
 <section class="industries" id="industries">
   <div class="industries-container">
