--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
   </section>
   
   
+<!-- 2 CONNECT CONTAINERS -- FOR RESUME UPLOAD AND CONTACT US -->
+  
   <section class="connect-section">
   <div class="connect-container">
     <div class="connect-box">
@@ -65,6 +67,7 @@
   </div>
 </section>
   
+ <!-- ABOUT US SECTION -->
   
  <section class="about-us" id="about">
     <h2>About Us</h2>
