--- a/index.html
+++ b/index.html
@@ -191,68 +191,72 @@
 
       <div class="industry-card">
         <img src="images/banking-svgrepo-com.svg" alt="Banking Icon" class="industry-icon">
-        Banking & Financial Services
+        <h3>Banking & Financial Services</h3>
       </div>
 
       <div class="industry-card">
         <img src="images/factory-svgrepo-com.svg" alt="Manufacturing Icon" class="industry-icon">
-        Manufacturing
+        <h3>Manufacturing</h3>
       </div>
 
       <div class="industry-card">
         <img src="images/healthcare-svgrepo-com.svg" alt="Healthcare Icon" class="industry-icon">
-        Life Sciences & Healthcare
+        <h3>Life Sciences & Healthcare</h3>
       </div>
 
       <div class="industry-card">
         <img src="images/technology-svgrepo-com.svg" alt="Tech Icon" class="industry-icon">
-        High-Tech & Startups
+        <h3>High-Tech & Startups</h3>
       </div>
 
       <div class="industry-card">
         <img src="images/commerce-tag-svgrepo-com.svg" alt="E-commerce Icon" class="industry-icon">
-        Retail & E-commerce
+        <h3>Retail & E-commerce</h3>
       </div>
 
       <div class="industry-card">
         <img src="images/utilities-svgrepo-com.svg" alt="Utilities Icon" class="industry-icon">
-        Oil, Gas & Energy Utilities
+        <h3>Oil, Gas & Energy Utilities</h3>
       </div>
-	  
-	  <div class="industry-card">
-	  <img src="images/shopping-cart-fast-moving-svgrepo-com.svg" alt="FMCG Icon" class="industry-icon">
-	  FMCG
-	  </div>
+      
+      <div class="industry-card">
+        <img src="images/shopping-cart-fast-moving-svgrepo-com.svg" alt="FMCG Icon" class="industry-icon">
+        <h3>FMCG</h3>
+      </div>
 
-	 <div class="industry-card">
-	  <img src="images/call-center-person-2-svgrepo-com.svg" alt="BPO Icon" class="industry-icon">
-	  BPO / KPO
-	 </div>
+      <div class="industry-card">
+        <img src="images/call-center-person-2-svgrepo-com.svg" alt="BPO Icon" class="industry-icon">
+        <h3>BPO / KPO</h3>
+      </div>
 
-	 <div class="industry-card">
-	  <img src="images/transmission-tower-svgrepo-com.svg" alt="Telecom Icon" class="industry-icon">
-	  Telecom
-	 </div>
+      <div class="industry-card">
+        <img src="images/transmission-tower-svgrepo-com.svg" alt="Telecom Icon" class="industry-icon">
+        <h3>Telecom</h3>
+      </div>
 
-	 <div class="industry-card">
-	  <img src="images/real-estate-svgrepo-com.svg" alt="Real Estate Icon" class="industry-icon">
-	  Real Estate & Housing
-	 </div>
+      <div class="industry-card">
+        <img src="images/real-estate-svgrepo-com.svg" alt="Real Estate Icon" class="industry-icon">
+        <h3>Real Estate & Housing</h3>
+      </div>
 
-	 <div class="industry-card">
-	  <img src="images/engineering-helmet-cog-svgrepo-com.svg" alt="Engineering Icon" class="industry-icon">
-	  Engineering
-	 </div>
+      <div class="industry-card">
+        <img src="images/engineering-helmet-cog-svgrepo-com.svg" alt="Engineering Icon" class="industry-icon">
+        <h3>Engineering</h3>
+      </div>
 
-	 <div class="industry-card">
-	  <img src="images/television-technology-entertainment-svgrepo-com.svg" alt="Media Icon" class="industry-icon">
-	  Media & Entertainment
-	 </div>
+      <div class="industry-card">
+        <img src="images/television-technology-entertainment-svgrepo-com.svg" alt="Media Icon" class="industry-icon">
+        <h3>Media & Entertainment</h3>
+      </div>
 
     </div>
   </div>
 </section>
+
   
+
+<!-- PORTFOLIO SECTION -->
+
 
   <section class="portfolio" id="portfolio">
     <div class="portfolio-container">
