--- a/index.html
+++ b/index.html
@@ -334,7 +334,8 @@
 </section>
   
   
-  <!-- TESTIMONIALS SECTION START -->
+<!-- TESTIMONIALS SECTION START -->
+
 <section class="testimonials" id="testimonials">
   <div class="testimonials-container">
     <h2>What Our Clients Say</h2>
@@ -344,10 +345,10 @@
         
         <!-- Testimonial 1 -->
         <div class="testimonial-card">
-          <div class="testimonial-content">
-            <div class="quote-icon">"</div>
+          <div class="testimonial-content vibrant-color-1">
+            <div class="quote-mark">"</div>
             <p class="testimonial-text">
-              "Veriscope Talent transformed our hiring process. Within 7 days, they delivered 3 exceptional candidates for our Senior Product Manager role. Their understanding of our startup culture and technical requirements was spot-on. The quality of candidates was outstanding."
+              Veriscope Talent transformed our hiring process. Within 7 days, they delivered 3 exceptional candidates for our Senior Product Manager role. Their understanding of our startup culture and technical requirements was spot-on. The quality of candidates was outstanding.
             </p>
             <div class="testimonial-author">
               <div class="author-avatar">S</div>
@@ -361,10 +362,10 @@
 
         <!-- Testimonial 2 -->
         <div class="testimonial-card">
-          <div class="testimonial-content">
-            <div class="quote-icon">"</div>
+          <div class="testimonial-content vibrant-color-2">
+            <div class="quote-mark">"</div>
             <p class="testimonial-text">
-              "We needed a CFO fast, and Veriscope delivered. Not only did they find us the perfect candidate, but they also handled all the coordination seamlessly. Their professionalism and efficiency are unmatched in the industry."
+              We needed a CFO fast, and Veriscope delivered. Not only did they find us the perfect candidate, but they also handled all the coordination seamlessly. Their professionalism and efficiency are unmatched in the industry.
             </p>
             <div class="testimonial-author">
               <div class="author-avatar">R</div>
@@ -378,10 +379,10 @@
 
         <!-- Testimonial 3 -->
         <div class="testimonial-card">
-          <div class="testimonial-content">
-            <div class="quote-icon">"</div>
+          <div class="testimonial-content vibrant-color-3">
+            <div class="quote-mark">"</div>
             <p class="testimonial-text">
-              "After struggling with other recruiters for months, Veriscope found our Head of Sales in under a month. They truly understand the healthcare industry and delivered candidates who weren't just qualified, but were a perfect cultural fit too."
+              After struggling with other recruiters for months, Veriscope found our Head of Sales in under a month. They truly understand the healthcare industry and delivered candidates who weren't just qualified, but were a perfect cultural fit too.
             </p>
             <div class="testimonial-author">
               <div class="author-avatar">M</div>
@@ -395,10 +396,10 @@
 
         <!-- Testimonial 4 -->
         <div class="testimonial-card">
-          <div class="testimonial-content">
-            <div class="quote-icon">"</div>
+          <div class="testimonial-content vibrant-color-4">
+            <div class="quote-mark">"</div>
             <p class="testimonial-text">
-              "Veriscope's precision in understanding our manufacturing requirements was impressive. They filled our Director of Operations role with a candidate who hit the ground running from day one. Exceptional service and results."
+              Veriscope's precision in understanding our manufacturing requirements was impressive. They filled our Director of Operations role with a candidate who hit the ground running from day one. Exceptional service and results.
             </p>
             <div class="testimonial-author">
               <div class="author-avatar">A</div>
@@ -412,10 +413,10 @@
 
         <!-- Testimonial 5 -->
         <div class="testimonial-card">
-          <div class="testimonial-content">
-            <div class="quote-icon">"</div>
+          <div class="testimonial-content vibrant-color-5">
+            <div class="quote-mark">"</div>
             <p class="testimonial-text">
-              "Working with Veriscope was a game-changer for our startup. They understood our fast-paced environment and budget constraints while still delivering top-tier talent. Their candidate became our CTO and has been instrumental in our growth."
+              Working with Veriscope was a game-changer for our startup. They understood our fast-paced environment and budget constraints while still delivering top-tier talent. Their candidate became our CTO and has been instrumental in our growth.
             </p>
             <div class="testimonial-author">
               <div class="author-avatar">P</div>
@@ -443,6 +444,7 @@
     </div>
   </div>
 </section>
+
 <!-- TESTIMONIALS SECTION END -->
   
   
@@ -571,7 +573,7 @@
 </script>
  
  
- <script>
+<script>
   // Testimonial Carousel Functionality
   class TestimonialCarousel {
     constructor() {
